fix chat spacing

--- a/ui/chat/css/_discussion.scss
+++ b/ui/chat/css/_discussion.scss
@@ -31,8 +31,8 @@
       font-weight: bold;
       padding: 0;
       color: $c-font-dim;
-      word-spacing: 0.3em;
       letter-spacing: -1px;
+      margin-right: .4em;
     }
     .title {
       margin-right: 3px;
